[tool.poetry]
name = "hyluxe"
version = "0.1.0"
description = ""
authors = ["Lachlan Holden <lachlan.holden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hy = "^0.28.0"
pygls = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
